--- a/CSS/flexboxgrid.css
+++ b/CSS/flexboxgrid.css
@@ -119,7 +119,7 @@ div#content {
   margin-top:15px; 
   font : 0.9em/1.3em "bitstream vera sans", verdana; 
   position:relative; 
-  top: 26px; 
+  left: 14%; 
   text-align: left; 
   background: #cfecf5;
   padding: 20px; 
