--- a/CSS/base.css
+++ b/CSS/base.css
@@ -28,7 +28,7 @@ a {
 }
 
 #header{
-	height: 180px;
+	height: 23.6%;
 	color: #172322;
   /*	background: transparent url(../images/header-corners.png) no-repeat bottom left; */
 }
