--- a/CSS/css3-tabs.css
+++ b/CSS/css3-tabs.css
@@ -1,4 +1,4 @@
-﻿#header { width:500px; height:100px; background-image:url('images/bluepan.jpg'); 
+﻿#header { width: 67%; height:100px; background-image:url('images/bluepan.jpg'); 
 background-repeat:no-repeat; background-position:center; color:white; text-align:center; margin-bottom:-27px;
 }
 h1 { font-size:150%; font-weight:bold; padding-top:20px; 
