--- a/CSS/css3-tabs.css
+++ b/CSS/css3-tabs.css
@@ -1,5 +1,5 @@
 ﻿#header { width: 67%; height:100px; background-image:url('images/bluepan.jpg'); 
-background-repeat:no-repeat; background-position:center; color:white; text-align:center; margin-bottom:-27px;
+background-repeat:no-repeat; background-position:center; color:white; text-align:center; margin-left:-14.3%;
 }
 h1 { font-size:150%; font-weight:bold; padding-top:20px; 
 }
