--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -173,7 +173,7 @@ h1#html5-ch1-7h1 {
 }
 
 div#html5-ch1-7content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
-border-bottom:10px white solid; width: 776px; margin-top:-54px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
+border-bottom:10px white solid; width: 100%; margin-top:-54px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
 
 h2#html5-ch1-7h2 {
