--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -10,7 +10,7 @@ header, footer, section, article, nav { display:block;
 }
 div {
   border: 1px solid black;
-  padding: 0.3em 0.5em;
+  /* padding: 0.3em 0.5em; */
 }
 div.wrapper { 
     position: relative; 
@@ -1199,6 +1199,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
