--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -17,8 +17,8 @@ div.wrapper {
     position: relative; 
     top: 0em; 
     left: 0px; 
-    width: 970px 
-	font-size: 100%;
+    width: 970px; 
+	  font-size: 100%;
     margin-left:0; 
     margin-right:0; 
 	text-align: center;
