--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -17,7 +17,7 @@ div.wrapper {
     position: relative; 
     top: 0em; 
     left: 0px; 
-    width: 970px; 
+    width: 23%; 
 	  font-size: 100%;
     margin-left:0; 
     margin-right:0; 
