--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -16,7 +16,7 @@ div {
 div.wrapper { 
     position: relative; 
     top: 0em; 
-    left: 0px; 
+    left: 23%; 
     width: 23%; 
 	  font-size: 100%;
     margin-left:0; 
