--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -8,10 +8,12 @@ body { background:#FFF *url(images/green-grad.jpg) repeat-x; margin: auto;
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
+/*
 div {
   border: 1px solid black;
-  /* padding: 0.3em 0.5em; */
+   padding: 0.3em 0.5em; 
 }
+   */
 
 div.wrapper { 
     position: relative; 
