--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -177,7 +177,7 @@ div#html5-ch1-7content.data {
   border-left:10px white solid; 
   border-right:10px white solid; 
 border-bottom:10px white solid; 
-width: 954px; margin-top:-54px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
+width: 848px; margin-top:-206px; padding:8px; font-size:medium; color:maroon; 
 }
 
 h2#html5-ch1-7h2 {
