--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -19,7 +19,7 @@ div.wrapper {
     position: relative; 
     top: 3.5em; 
     left: 23.6%; 
-    width: 1020px; 
+    width: 100%; 
 	  font-size: 1005px;
     margin-left:0; 
     margin-right:0; 
