--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -20,10 +20,10 @@ div.wrapper {
     top: 3.5em; 
     left: 23.6%; 
     width: 100%; 
-	  font-size: 1005px;
+	  font-size: 100%;
     margin-left:0; 
     margin-top:-56px;
-     
+
 	  text-align: center;
 }
 img.logo { overflow-clip-margin: content-box; overflow: clip; }
