--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -19,7 +19,7 @@ div.wrapper {
     position: relative; 
     top: 3.5em; 
     left: 23.6%; 
-    width: 100%; 
+    width: 1005px; 
 	  font-size: 100%;
     margin-left:0; 
     margin-top:-56px;
