--- a/nav[1].css
+++ b/nav[1].css
@@ -1,9 +1,10 @@
+/* 
 body {
-  /* margin: 25px; */
+  margin: 25px; *
   -webkit-animation: bugfix infinite 1s;
-  /* needed for checkbox hack */
+  * needed for checkbox hack 
 }
-
+*/
 @-webkit-keyframes bugfix {
   from {
     padding: 0;
