--- a/CSS/gradient-style.css
+++ b/CSS/gradient-style.css
@@ -1,5 +1,7 @@
+/*
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
+*/
 header, nav, footer, article, section { display:block;
 }
 header {width:920px; height:160px; border:10px solid white ; margin:20px auto;
