--- a/CSS/inset-active.css
+++ b/CSS/inset-active.css
@@ -1,5 +1,7 @@
+/*
 html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 0; margin: 0; 
 }
+*/
 header, footer, section, article, nav { display:block; 
 }
 #container { margin-left:20px; margin-top:20px;
