--- a/CSS/liquid-maxmin.css
+++ b/CSS/liquid-maxmin.css
@@ -1,6 +1,6 @@
-﻿/*flood the screen with yellow*/
+﻿/*flood the screen with yellow*
 body { width:100%; text-align: center; background-color:yellow; font-family:"times new roman"; font-size:large; font-weight:bold;
-}
+} */
 #container {  width:95%; margin:auto; background-color:white; text-align: center; max-width:1200px; min-width:960px;}
 #hdr { 	font-size:x-large;font-weight:bold; }
 /* set widths and float on nav col and col 3*/
