--- a/CSS/print.css
+++ b/CSS/print.css
@@ -1,6 +1,5 @@
 ﻿div.noprint { display:none;
 }
-body {
-	width:100%; margin:0; float:none; color:black; background-color:white;}
+body { color:black; 
 }
 h1, h2, h3, h4, h5, h6 { margin-top:0; margin-bottom:0; }
