--- a/CSS/gradient-pic.css
+++ b/CSS/gradient-pic.css
@@ -1,6 +1,7 @@
+/*
 body, header, #content { margin:0; padding:0; border:0; 
 }
-/*add display attributes for the semantic tags*/
+add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block; 
 }
 /*change #header to header and remove div*
