--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -147,7 +147,7 @@ nav {
 
 /*remove the # from #header*/
 header#html5-ch1-7header.data {
-  width: 1006px;
+  width: 60.1%;
   height: 180px;
   padding: 2px;
   border: 10px white solid;
