--- a/CSS/squaretabs.css
+++ b/CSS/squaretabs.css
@@ -51,25 +51,12 @@ h1 { font-size:300%; color :white; position: relative; left:45px; top: 5px; widt
     3px 3px black, 4px 4px black,
     5px 5px black, 6px 6px black,
     7px 7px black, 8px 8px black; 
-    font-weight:normal; 
-     /* 
-      padding-top:35px; 
-      margin-bottom:-10px; 
-      height: 94px; 
-      margin:auto;
-      padding: .3em .8em;
-      border: 1px solid rgba(0, 0, 0, .1);
-      
-      border-radius: .2em;
-      box-shadow: 0 .05em .25em rgba(0, 0, 0, .5);
-    
-      line-height: 5.5;
-      border-width: 10px;
-      border-left-width: 0;font-weight:normal; text-align:center; padding-top:2em; margin-bottom:-0.625em; margin:auto; */
+    font-weight:normal;   
 }
 
-div.menu-bar { position: relative; top: 2.5em; left: 1em;
-
+div.menu-bar { 
+  position: relative; 
+  top: 2.5em; left: 1em;
 }
 /* Set styles to equalise browser rendition
 html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li {  padding: 0; margin: auto; 
