--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -147,12 +147,12 @@ nav {
 
 /*remove the # from #header*/
 header#html5-ch1-7header.data {
-  width: 60.1%;
+  width: 64.6%;
   height: 180px;
   padding: 2px;
   border: 10px white solid;
   background: url(images/header3.jpg);
-  margin-left: 16px;
+  margin-left: auto;
 }
 
 h1#html5-ch1-7h1 {
