--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -15,6 +15,45 @@ div {
   border: 1px solid black;
    padding: 0.3em 0.5em; 
 }
+
+#menu { 
+  float: right;
+  width: 200px;
+}
+
+#menu, #menu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#menu li { 
+  cursor: pointer;
+  background: #94C5EB;
+  border-bottom: 1px solid #444;
+}
+
+#menu li a {
+  text-decoration: none;
+}
+
+#menu > li > a { 
+  padding: 2px 10px;
+  font-weight:bold;
+}
+
+#menu li li { 
+  cursor: auto;
+  border: 0;
+  padding: 0 14px;
+  background-color: #fff;
+}
+
+#disclaimer, #intro {
+  width: 400px;
+}
+
+
 /* base.css */
 #photos {
   border: 1px solid #BEBEBE;
