--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ body {
   background: #FFF url(images/green-grad.jpg) repeat-x;
   margin: auto;
 }
-
+/*
 body {
   margin: auto;
   font-family: var(--bs-body-font-family);
