--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -171,11 +171,15 @@ h1#html5-ch1-7h1 {
 }
 
 div#html5-ch1-7content.data { 
-  background-color:transparent; 
-  border-left:10px white solid; 
-  border-right:10px white solid; 
-border-bottom:10px white solid; 
-width: 61.4rem; margin-top:-206px; padding: 18px; font-size:medium; color:maroon; 
+    background-color:transparent; 
+    border-left:10px white solid; 
+    border-right:10px white solid; 
+    border-bottom:10px white solid; 
+    width: 61.4rem; 
+    margin-top: 1em; 
+    padding: 18px; 
+    font-size:medium; 
+    color:maroon; 
 }
 
 h2#html5-ch1-7h2 {
