--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -175,7 +175,7 @@ div#html5-ch1-7content.data {
     border-left:10px white solid; 
     border-right:10px white solid; 
     border-bottom:10px white solid; 
-    width: 61.4rem; 
+    width: 970px; 
     margin-top: 3em; 
     padding: 18px; 
     font-size:medium; 
