--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -2,7 +2,7 @@
 html, body {
   min-height: 100%; }
 
-/* equalise for various browsers and change #header to header */
+/* equalise for various browsers and change #header to header *
 div body header #content { margin:0; padding:0; border:0;
 }
 body { background:#FFF *url(images/green-grad.jpg) repeat-x; margin: auto;
@@ -181,7 +181,7 @@ header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
 header#html5style2header {width:920px; height:180px; padding:0; border:10px white solid; 
-  background: url(images/header3.jpg); margin:10px auto; 
+  background: url(images/bda-20.jpg); margin:10px auto; 
 }
 /*
 h1 { font-size:150%; color :black; position: relative; text-align:center; top: 2px; width:480px; 
@@ -2428,6 +2428,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
