--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -181,7 +181,7 @@ header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
 header#html5style2header {width:920px; height:180px; padding:0; border:10px white solid; 
-  background: url(images/bda-20.jpg); margin:10px auto; 
+  background: url(./bda-20.jpg); margin:10px auto; 
 }
 /*
 h1 { font-size:150%; color :black; position: relative; text-align:center; top: 2px; width:480px; 
@@ -201,7 +201,7 @@ h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
-#html5style2midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
+#html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
@@ -1745,7 +1745,7 @@ h3 {
 }
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
-}*
+}*/
 #midcol {
   margin-left: 315px;
   margin-right: 145px;
@@ -2428,6 +2428,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
