--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -92,7 +92,7 @@ div.wrapper {
     position: relative; 
     top: 3.5em; 
     left: 23.6%; 
-    width: 1000px; 
+    width: 100%; 
 	  font-size: 100%;
     margin-left:0; 
     margin-top:-56px;
