--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -13,7 +13,7 @@ header, footer, section, article, nav { display:block;
 
 div {
   border: 1px solid black;
-   padding: 0.3em 0.5em; 
+ /*  padding: 0.3em 0.5em; */
 }
 
 #menu { 
@@ -2428,6 +2428,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
