--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1,4 +1,5 @@
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2. */
+
 html, body {
   min-height: 100%; }
 
@@ -1106,6 +1107,7 @@ transform: skewX(45deg);
 @media only screen and (min-width: 75em) {
   .container {
     width: 59%;
+	margin: auto;
   }
 
   .col-lg,
@@ -2428,6 +2430,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
