--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -1187,7 +1187,7 @@ transform: skewX(45deg);
 
 @media only screen and (min-width: 75em) {
   .container {
-    width: 59%;
+    width: 59em;
 	margin: auto;
   }
 
@@ -2511,6 +2511,7 @@ li { margin: 10px; list-style-type:none;
   position: absolute;
   left: 0;
 }
+
 
 
 
