--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -21,6 +21,12 @@ a {
 	color: #3687AF;
 }
 
+#container{
+	margin:20px auto;
+	text-align: left;
+width: 1000px
+}
+
 #header{
 	height: 23.6%;
 	color: #172322;
