--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,15 @@
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
 
+#fader {
+  position: relative;
+}
+
+#fader .to {
+  display: none;
+  position: absolute;
+  left: 0;
+}
+
 * {
 	margin: 0;
 	border: 0;
@@ -227,3 +237,4 @@ img{
     padding:40px 10px;
   }
 }
+
