--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,18 @@
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
 
+.box {
+  position: absolute; 
+  width: 50px;
+  height: 50px;
+}
+#green {
+  background-color: green;
+}
+#red {
+  background-color: red;
+  top: 60px;
+}
+
 #fader {
   position: relative;
 }
@@ -237,4 +250,5 @@ img{
     padding:40px 10px;
   }
 }
+
 
