--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,16 @@
 @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
 
 #photos img {
+  position: absolute;
+}
+
+#photos {
+  width: 180px;
+  height: 200px;
+  overflow: hidden;
+}
+
+#photos img {
   display: none;
 }
 
@@ -258,6 +268,7 @@ img{
     padding:40px 10px;
   }
 }
+
 
 
 
