--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -356,7 +356,7 @@ header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
 header#html5style2header {width:920px; height:180px; padding:0; border:10px white solid; 
-  background: url(../bda-20.jpg); margin:10px auto; 
+  background: url(../bda-20.jpg); background-position: bottom; margin:10px auto; 
 }
 /*
 h1 { font-size:150%; color :black; position: relative; text-align:center; top: 2px; width:480px; 
