--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -6,8 +6,8 @@ body { background:#fff url(images/green-grad.jpg) repeat-x; margin:auto; box-sha
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block; 
 }
-header {width:920px; height:180px; padding:0; border:10px white solid; 
-  background: url(images/header3.jpg); margin:10px auto; 
+header {width:920px; height:180px; padding:0; border:10px solid hsla(0, 0%,100%,.5); 
+  background: url(CSS/images/header3.jpg); margin:10px auto; 
 }
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; width:480px; 
 }
@@ -19,7 +19,7 @@ border-bottom:10px solid hsla(0, 0%,100%,.5); width: 904px; margin-top:-10px; ma
 }
 h2 { font-size:x-large; color:white; margin:0 0 10px 
 }
-h3 { font-size:large; color:white; margin:0 0 6px 0; 
+h3 { font-size:100%; color:white; margin:0 0 6px 0; 
 }
 #leftcol { float:left; width: 310px; vertical-align:top; 
 }
