--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -17,7 +17,7 @@ h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; wid
 #content { background-color:transparent; border-left:10px solid hsla(0, 0%,100%,.5); border-right:10px solid hsla(0, 0%,100%,.5); 
 border-bottom:10px solid hsla(0, 0%,100%,.5); width: 904px; margin-top:-10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
-h2 { font-size:x-large; color:white; margin:0 0 10px 
+h2 { font-size:100%; color:white; margin:0 0 10px 
 }
 h3 { font-size:100%; color:white; margin:0 0 6px 0; 
 }
