--- a/CSS/squares-html5.css
+++ b/CSS/squares-html5.css
@@ -1,4 +1,4 @@
-﻿body, header, div, #content, { margin:0; padding:0; border:0; 
+﻿body, header, div, #content { margin:0; padding:0; border:0; 
 }
 body{background: #39F; color: navy; font: medium Arial;
 }
