--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -184,12 +184,12 @@ body { background:#FFF *url(images/green-grad.jpg) repeat-x; margin: auto;
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
-
+/*
 div {
   border: 1px solid black;
  padding: 0.2em 0.2em;
 }
-
+*/
 #menu { 
   float: right;
   width: 200px;
