--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -94,18 +94,14 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
-header {width:920px; height:180px; padding:0; border:10px white solid; 
-background: url(images/header3.jpg); margin:10px auto;
+header {width:920px; height:180px; padding:0; border:10px white solid; background: url(images/header3.jpg); margin:10px auto;
 }
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
 width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; 
-border-right:10px white solid; border-bottom:10px white solid; width: 904px; 
-margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; 
-font-size:medium; color:maroon;
+#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
 }
 h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
@@ -115,8 +111,7 @@ h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
 #rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
-vertical-align:top;
+#midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
 nav ul { margin:10px 0 10px 0; width:135px; float:right;
@@ -142,8 +137,7 @@ img { border:0;
 li { margin: 10px; list-style-type:none;
 }
 /* MouseOut state (default) - create a space for the larger images and hide them*/
-#col-1 a img.hid { width: 260px; height:390px; position: 
-absolute; top: 10px; left: 140px; visibility: hidden;
+#col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 140px; visibility: hidden;
 }
 /* MouseOver state (hover)- reveal larger image */
 #col-1 a:hover { background: white;
@@ -151,13 +145,11 @@ absolute; top: 10px; left: 140px; visibility: hidden;
 #col-1 a:hover img.hid { visibility:visible;
 }
 /* set general anchor styles and include the zoom fix for IE6*/
-li.btn a { display: block; color: white; font-weight: bold; 
-text-decoration: none; zoom:1;
+li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
 /* mouseout (default) */
-li.btn a { background:#559a55; color: white; border: 5px outset #559a55; 
-padding-bottom:3px;
+li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
 /* mouseover */
 li.btn a:hover { background: red; color:white; border: 5px outset red;
@@ -4603,7 +4595,7 @@ footer#html5style2footer {
   }
 }
 
-https://www.reddit.com/r/VISITDURBAN/comments/1q2745h/why_i_started_visit_durban_from_new_yorkusa/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button
+/* https://www.reddit.com/r/VISITDURBAN/comments/1q2745h/why_i_started_visit_durban_from_new_yorkusa/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button */
 
 
 
