--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -349,6 +349,7 @@ footer#html5-style-2footer { clear:both; color:maroon; text-align:center; paddin
 /*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0; 
 }
+/*
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 /*add display attributes for the semantic tags*
