--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -2317,10 +2317,7 @@ header {
       margin-bottom: 28px;
       margin-bottom: 1.75rem; }
   @media screen and (min-width: 48em) {
-    header {
-      padding-top: 28px;
-      padding-top: 1.75rem;
-      height: 14em; } }
+     }
   @media screen and (min-width: 62.5em) {
     header {
       position: relative; }
