--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -496,12 +496,12 @@ div#content {
                     }
                 footer { clear:both; background-color:#FF9966; text-align:center; padding: .3em .8em;
                     border: 1px solid rgba(0, 0, 0, .1);
-                    background: #58a linear-gradient(#FF9966, #58a);
+                    /* background: #58a linear-gradient(#FF9966, #58a); */
                     border-radius: .2em;
                     box-shadow: 0 .05em .25em rgba(0, 0, 0, .5);
                     color: white;
                     text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
-                    font-size: 125%;
+                    font-size: 100%;
                     line-height: 1.5;
                     border-width: 10px;
                     border-left-width: 0;                   
