--- a/style.css
+++ b/style.css
@@ -810,6 +810,8 @@ h2{
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+
+/*
 header {
   background: rgba(25, 25, 25, 0.95);
   transition: all 0.5s;
